--- a/web-clothes.css
+++ b/web-clothes.css
@@ -12,36 +12,54 @@
     height:280px;
     width:100%;
 }
-
+.hotline h4{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top:30px;
+    margin-left: 60px;
+    float:left;
+}
 .logo img{
-    width: 450px;
-    height: 200px;
-    margin:0 0 0 500px; 
+    width: 300px;
+    height: 150px;
+    margin:0 0 0 560px; 
 }
 .search input{
     height: 30px;
     width:450px;
-    margin:20px 20px 0 500px;
+    margin:30px 20px 0 250px;
     float:left;
+    border-radius:20px;
 }
 .login input{
     height: 30px;
     width:120px;
-    margin:20px 0px 0 20px;
+    margin:30px 0px 0 20px;
     float:right;
     border-radius:20px;
 }
 .register input{
     height: 30px;
     width:130px;
-    margin:20px 0 0 20px;
+    margin:30px 0 0 20px;
     float:right;
     border-radius:20px;
 }
 .buy input{
     height: 30px;
     width:130px;
-    margin:20px 20px 0 20px;
+    margin:30px 20px 0 20px;
     float:right; 
     border-radius:20px;
+}
+.home a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    float:left;
+}
+.clothings select{
+    
 }
