--- a/web-clothes.css
+++ b/web-clothes.css
@@ -8,7 +8,7 @@
     width: 100%;
 }
 .logo{
-    background-color: black;
+    background-color: white;
     height:280px;
     width:100%;
 }
@@ -21,9 +21,9 @@
     float:left;
 }
 .logo img{
-    width: 300px;
-    height: 150px;
-    margin:0 0 0 560px; 
+    width: 250px;
+    height: 140px;
+    margin:0px 0 0 570px; 
 }
 .search input{
     height: 30px;
@@ -60,6 +60,6 @@
     font-weight: bold;
     float:left;
 }
-.clothings select{
+.clothings selectz{
     
 }
