--- a/web-clothes.css
+++ b/web-clothes.css
@@ -8,9 +8,14 @@
     width: 100%;
 }
 .logo{
-    background-color: white;
-    height:280px;
+    background-color: black;
+    height:180px;
     width:100%;
+}
+.logo img{
+    width: 250px;
+    height: 140px;
+    margin:0px 0 0 570px; 
 }
 .hotline h4{
     color: white;
@@ -19,11 +24,6 @@
     margin-top:30px;
     margin-left: 60px;
     float:left;
-}
-.logo img{
-    width: 250px;
-    height: 140px;
-    margin:0px 0 0 570px; 
 }
 .search input{
     height: 30px;
@@ -53,13 +53,50 @@
     float:right; 
     border-radius:20px;
 }
+.home button{
+    height: 30px;
+    width:130px;
+    margin:20px 20px 0 200px;
+    float:left;
+    border-radius:20px;
+}
 .home a{
     text-decoration: none;
     color: black;
     font-size: 20px;
     font-weight: bold;
-    float:left;
 }
-.clothings selectz{
-    
+.clothings select{
+    height: 30px;
+    width:250px;
+    margin:20px 0 0 100px;
+    border-radius:20px;
+    float: left;
+}
+.contact button{
+    width: 150px;
+    margin-left: 150px;
+    margin-top: 20px;
+    border-radius: 20px;
+    float: left;
+}
+.contact a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+}
+.clearance_sale button{
+    background-color: yellow;
+    width:200px;
+    margin-left: 150px;
+    margin-top: 20px;
+    border-radius: 20px;
+    float: left;
+}
+.clearance_sale a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
 }
