--- a/web-clothes.css
+++ b/web-clothes.css
@@ -1,3 +1,16 @@
+@media only screen and (max-width: 768px) {
+    .nav {
+        flex-direction: column;
+    }
+    .nav-link {
+        flex-direction: column;
+    }
+    .title{
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
 :root {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
@@ -55,12 +68,90 @@ body {
     font-size: 1.5rem;
     margin: 0 0.25rem ;
 }
-
-@media only screen and (max-width: 768px) {
-    .nav {
-        flex-direction: column;
-    }
-    .nav-link {
-        flex-direction: column;
-    }
+.tab2{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 1rem 0;
 }
+.tab2-title{
+    display: flex;
+    padding: 1rem 0;
+}
+.home > a{
+    color:blue;
+}
+.dropdown {
+    position:relative;
+    display: inline-block
+}
+.dropdown{
+    display:none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+.list:hover .dropdown {
+    display: block;
+}
+.dropdown > li > a{
+    text-decoration: none;
+    color: #000;
+    padding: 0.5rem 1rem;
+}
+.dropdown>li{
+    list-style: none;
+    padding: 1rem 0;
+}
+.dropdown > li > a:hover{
+    color: #fff;
+    background-color: #000;
+}
+.title{
+    display: flex;
+    align-items: baseline;
+}
+.title > li{
+    list-style: none;
+    margin: 0 7rem;
+}
+.title > li > a{
+    text-decoration: none;
+    color: #000;
+    padding: 1rem 0;
+    font-weight: 700;
+    font-size:25px;
+}
+.clearance{
+    background-color: yellow;
+    border-radius: 10px;
+}
+.tab3{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 1rem 0;
+}
+.tab3>h2{
+    background-color:yellow;
+    height:5px;
+    width: 500px;
+}
+.product-list{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.product-item{
+    width: 240px;
+}
+.product-item-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
