--- a/web-clothes.css
+++ b/web-clothes.css
@@ -94,6 +94,10 @@ body {
     padding: 12px 16px;
     z-index: 1;
 }
+.list-dropdown{
+    display:none
+    box-shadow : 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
 .list:hover .dropdown {
     display: block;
 }
@@ -153,5 +157,19 @@ body {
     align-items: center;
     justify-content: center;
 }
-
-
+.see-all{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.see-all > button{
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    font-size: 1.5rem;
+    margin: 0 0.25rem ;
+    border-radius: 10px;
+}
+.see-all > button > a{
+    text-decoration: none;
+    color: #000;
+}
