--- a/web-clothes.css
+++ b/web-clothes.css
@@ -1,4 +1,5 @@
 @media only screen and (max-width: 768px) {
+
     .nav {
         flex-direction: column;
     }
@@ -76,7 +77,7 @@ body {
 }
 .tab2-title{
     display: flex;
-    padding: 1rem 0;
+    padding: 1rem;
 }
 .home > a{
     color:blue;
@@ -96,7 +97,7 @@ body {
 }
 .list-dropdown{
     display:none
-    box-shadow : 0px 8px 16px 0px rgba(0,0,0,0.2);
+    
 }
 .list:hover .dropdown {
     display: block;
@@ -157,6 +158,17 @@ body {
     align-items: center;
     justify-content: center;
 }
+.product-item > img{
+    border-radius: 20px;
+}
+.product-item > .product-item-info > button{
+    background-color:yellow;
+    border:1px solid #000;
+    cursor:pointer;
+    width: 100px;
+    border-radius: 20px;
+}
+
 .see-all{
     display: flex;
     align-items: center;
@@ -166,10 +178,33 @@ body {
     padding: 0.5rem 1rem;
     border-radius: 0.25rem;
     font-size: 1.5rem;
-    margin: 0 0.25rem ;
+    margin: 4rem 0.25rem ;
     border-radius: 10px;
 }
 .see-all > button > a{
     text-decoration: none;
     color: #000;
+}
+.footer{
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+}
+.footer-title{
+    height: 300px;
+    width: 100%;
+    background-color: black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.social{
+    display: flex;
+    align-items: baseline;
+}
+.social > h2{
+    color:white;
+}
+.icon > a > i{
+    color:white;
 }
