--- a/web-clothes.css
+++ b/web-clothes.css
@@ -11,6 +11,18 @@
         justify-content: center;
     }
 }
+@media only screen and (max-width: 390px ){
+    .nav{
+        flex-direction: column;
+    }
+    .nav-link{
+        flex-direction: column;
+    }
+    .title{
+        flex-direction: column;
+        justify-content: center;
+    }
+}
 
 :root {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
