--- a/Views/Home/web_clothes.cshtml
+++ b/Views/Home/web_clothes.cshtml
@@ -10,7 +10,7 @@
 <script src="./web-clothes.js"></script>
 
 <nav class="nav">
-    <a href="./web-clothes.html"><img src="./hinh-pro/logo.jpg" width="128" /></a>
+    <a href="./web-clothes.html"><img src="~/Content/hinh-pro/logo.jpg" width="128" /></a>
     <div class="search-box">
         <input type="text" name="search" class="input-search" placeholder="Search" />
         <button>
@@ -65,7 +65,7 @@
 <nav class="product">
     <div class="product-list">
         <div class="product-item">
-            <img src="./hinh-pro/pro_1.jpg" />
+            <img src="~/Content/hinh-pro/logo.jpg" />
             <div class="product-item-info">
                 <h3>Product 1</h3>
                 <p>Price: 100$</p>
