--- a/Views/Shared/web_clothes_view.cshtml
+++ b/Views/Shared/web_clothes_view.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "web_clothes";
-    Layout = "~/Views/Shared/web-clothes.cshtml";
+    Layout = "~/Views/Home/web-clothes.cshtml";
 }
 
 <link rel="stylesheet" href="~/Content/web_clothes.css">
@@ -65,7 +65,7 @@
 <nav class="product">
     <div class="product-list">
         <div class="product-item">
-            <img src="~/Content/hinh-pro/logo.jpg" />
+            <img src="~/Content/hinh-pro/pro_1.jpg" />
             <div class="product-item-info">
                 <h3>Product 1</h3>
                 <p>Price: 100$</p>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_2.jpg" />
+            <img src="~/Content/hinh-pro/pro_2.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 2</h3>
                 <p>Price: 100$</p>
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_3.jpg" />
+            <img src="~/Content/hinh-pro/pro_3.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 3</h3>
                 <p>Price: 100$</p>
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_4.jpg" />
+            <img src="~/Content/hinh-pro/pro_4.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 4</h3>
                 <p>Price: 100$</p>
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_5.jpg" />
+            <img src="~/Content/hinh-pro/pro_5.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 5</h3>
                 <p>Price: 100$</p>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_6.jpg" />
+            <img src="~/Content/hinh-pro/pro_6.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 6</h3>
                 <p>Price: 100$</p>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_7.jpg" />
+            <img src="~/Content/hinh-pro/pro_7.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 7</h3>
                 <p>Price: 100$</p>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_8.jpg" />
+            <img src="~/Content/hinh-pro/pro_8.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_9.jpg" />
+            <img src="~/Content/hinh-pro/pro_9.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_10.jpg" />
+            <img src="~/Content/hinh-pro/pro_10.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_11.jpg" />
+            <img src="~/Content/hinh-pro/pro_11.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_12.jpg" />
+            <img src="~/Content/hinh-pro/pro_12.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -161,7 +161,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_13.jpg" />
+            <img src="~/Content/hinh-pro/pro_13.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -169,7 +169,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_14.jpg" />
+            <img src="~/Content/hinh-pro/pro_14.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -177,7 +177,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_15.jpg" />
+            <img src="~/Content/hinh-pro/pro_15.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -185,7 +185,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_16.jpg" />
+            <img src="~/Content/hinh-pro/pro_16.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -193,7 +193,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_17.jpg" />
+            <img src="~/Content/hinh-pro/pro_17.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -201,7 +201,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_18.jpg" />
+            <img src="~/Content/hinh-pro/pro_18.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -209,7 +209,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_19.jpg" />
+            <img src="~/Content/hinh-pro/pro_19.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -217,7 +217,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="./hinh-pro/pro_20.jpg" />
+            <img src="~/Content/hinh-pro/pro_20.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
