--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -1,14 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "web_clothes";
+    ViewBag.Title = "web_clothes_view";
     Layout = "~/Views/Home/web-clothes.cshtml";
 }
 
-
-<link rel="stylesheet" href="~/Content/web_clothes.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
-<script src="./web-clothes.js"></script>
 
 <nav class="nav">
     <a href="./web-clothes.html"><img src="~/Content/hinh-pro/logo.jpg" width="128" /></a>
@@ -228,14 +223,14 @@
     </div>
 </nav>
 <nav class="see-all">
-    <input type="submit"><a href="#">See All</a>
+    <button type="submit"><a href="#">See All</a></button>
 </nav>
 <nav class="footer">
     <div class="footer-title">
         <div class="social">
             <h2>Theo Dõi Chúng Tôi</h2>
             <div class="icon">
-                <a href="ti-facebook"></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
