--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -228,10 +228,10 @@
 <nav class="footer">
     <div class="footer-title">
         <div class="social">
-            <h2>Theo Dõi Chúng Tôi</h2>
+            <h2>Liên Hệ</h2>
             <div class="icon">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/hoangtran1609"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/lol_bruzzzz/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
         <div class="help"></div>
@@ -248,7 +248,7 @@
             </ul>
         </div>
         <div class="contact_us">
-            <h2>Liên Hệ</h2>
+            <h2>Địa Chỉ</h2>
             <ul class="de-muc">
                 <li><a href="">Địa Chỉ: <span style="font-weight: bold;">123 Nguyễn Văn Linh, Quận 7, TP.HCM</span></a></li>
                 <li><a href="">Điện Thoại: <span style="font-weight: bold;">0946253769</span></a></li>
