--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -217,8 +217,14 @@ body {
 .social > h2{
     color:white;
 }
-.icon > a > i{
-    color:white;
+.footer-title {
+    display:plex;
+    align-items:baseline;
+    justify-content:space-evenly;
+}
+.icon > a > i {
+    color: white;
+    font-size: 40px;
 }
 .help > h2{
     color:white;
@@ -234,8 +240,4 @@ body {
 }
 .contact_us > h2{
     color:white;
-}
-.icon > a >i{
-    height:50px;
-    width:100%;
 }
