--- a/Views/Home/dieu_khoan.cshtml
+++ b/Views/Home/dieu_khoan.cshtml
@@ -4,6 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="~/Content/web_clothes.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
+    <script src="./web-clothes.js"></script>
 </head>
 <body>
     <div>
