--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -241,3 +241,10 @@ body {
 .contact_us > h2{
     color:white;
 }
+.reserved {
+    display: flex;
+
+}
+    .reserved > h4 {
+        color: white;
+    }
