--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -255,6 +255,9 @@
                 <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a></li>
             </ul>
         </div>
+        <div class="reserved">
+            <h4>Co_Chay® All Right Reserved</h4>
+        </div>
     </div>
 </nav>
 
