--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -240,7 +240,7 @@
         <div class="help">
             <h2>Hướng Dẫn</h2>
             <ul class="de-muc">
-                <li><a href="">Điều Khoản</a></li>
+                <li>@Html.ActionLink("Điều Khoản", "dieu_khoan_view","Home")</li>
                 <li><a href="">Hướng Dẫn Mua Hàng</a></li>
                 <li><a href="">Chính Sách Đổi Trả Hàng</a></li>
                 <li><a href="">Bảo Mật Thông Tin Khách Hàng</a></li>
