--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -29,7 +29,7 @@
     <div class="tab2-title">
         <ul class="title">
             <li class="home">
-                <a href="#">Home</a>
+                @Html.ActionLink("Home", "web_clothes_view","Home",null, new {@class= "linkbtnfull" })
             </li>
             <li class="list">
                 <h2>Clothings</h2>
