--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -253,9 +253,16 @@ body {
     justify-content:center;
     align-items:center;
 }
-.dieu-khoan-tag{
-    display:flex;
+.dieu-khoan-tag {
+    display: flex;
+    justify-content: center;
+    align-items:center;
 }
-.dieu-khoan-tag > .dieukhoan{
-    color:black;
-}
+    .dieu-khoan-tag .dieukhoan {
+        width: 200px;
+        font-weight:bold; 
+        font-size:30px;
+        color: black;
+        text-decoration: none;
+        text-align: center;
+    }
