--- a/Views/Home/see_all.cshtml
+++ b/Views/Home/see_all.cshtml
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/web_clothes.css")
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
-    <script src="./web-clothes.js"></script>
+    @Scripts.Render("~/Scripts/web_clothes.js")
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -16,6 +13,8 @@
     <script type="text/javascript" src="slick/slick.min.js"></script>
 </head>
 <body>
-      @RenderBody()
+    <div>
+        @RenderBody()
+    </div>
 </body>
 </html>
