--- a/Views/Home/see_all.cshtml
+++ b/Views/Home/see_all.cshtml
@@ -8,11 +8,12 @@
     @Scripts.Render("~/Scripts/web_clothes.js")
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
+</head>
+<body>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
-</head>
-<body>
     <div>
         @RenderBody()
     </div>
