--- a/Views/Home/see_all_view.cshtml
+++ b/Views/Home/see_all_view.cshtml
@@ -228,16 +228,20 @@
            ,null, new { @class = "p1" })
         </li>
         <li class="page2">
-            @Html.ActionLink("2", "web_clothes_view", "Home")
+            @Html.ActionLink("2", "web_clothes_view", "Home"
+           , null, new { @class = "p2" })
         </li>
         <li class="page3">
-            @Html.ActionLink("3", "web_clothes_view", "Home")
+            @Html.ActionLink("3", "web_clothes_view", "Home"
+           , null, new { @class = "p3" })
         </li>
         <li class="page4">
-            @Html.ActionLink("4", "web_clothes_view", "Home")
+            @Html.ActionLink("4", "web_clothes_view", "Home"
+           , null, new { @class = "p4" })
         </li>
         <li class="page5">
-            @Html.ActionLink("5", "web_clothes_view", "Home")
+            @Html.ActionLink("5", "web_clothes_view", "Home"
+           , null, new { @class = "p5" })
         </li>
     </ul>
 </nav>
