--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -264,14 +264,50 @@ body {
         text-align: center;
     }
 .paging{
+    list-style:none;
     display:flex;
     justify-content: space-evenly;
+    flex-direction:row;
     align-items: center;
     padding: 1rem 0;
 }
-.paging > li > .p1{
-    display:flex;
-    background-color:black;
-    height:100px;
-    width:100%;
-}
+    .paging > li > .p1 {
+        background-color: yellow;
+        font-size: 50px;
+        font-weight: bold;
+        border-radius: 20px;
+        text-decoration: none;
+        padding: 0 1rem;
+    }
+    .paging > li > .p2 {
+        background-color: yellow;
+        font-size: 50px;
+        font-weight: bold;
+        border-radius: 20px;
+        text-decoration: none;
+        padding: 0 1rem;
+    }
+    .paging > li > .p3 {
+        background-color: yellow;
+        font-size: 50px;
+        font-weight: bold;
+        border-radius: 20px;
+        text-decoration: none;
+        padding: 0 1rem;
+    }
+    .paging > li > .p4 {
+        background-color: yellow;
+        font-size: 50px;
+        font-weight: bold;
+        border-radius: 20px;
+        text-decoration: none;
+        padding: 0 1rem;
+    }
+    .paging > li > .p5 {
+        background-color: yellow;
+        font-size: 50px;
+        font-weight: bold;
+        border-radius: 20px;
+        text-decoration: none;
+        padding:0 1rem;
+    }
