--- a/Views/Home/see_all.cshtml
+++ b/Views/Home/see_all.cshtml
@@ -6,16 +6,15 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/web_clothes.css")
     @Scripts.Render("~/Scripts/web_clothes.js")
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
     <div>
         @RenderBody()
     </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js%22%3E"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js%22%3E"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js%22%3E"></script>
 </body>
 </html>
