--- a/Views/Home/huong_dan_mua_hang_view.cshtml
+++ b/Views/Home/huong_dan_mua_hang_view.cshtml
@@ -5,7 +5,8 @@
 }
 
 <nav class="nav">
-    <img src="~/Content/hinh-pro/logo.jpg" width="128" />
+    <a href="~/Views/Home/web_clothes_view.cshtml"><img src="~/Content/hinh-pro/logo.jpg" width="128" /></a>
+    
     <div class="search-box">
         <input type="text" name="search" class="input-search" placeholder="Search" />
         <button>
