--- a/Views/Home/dieu_khoan_view.cshtml
+++ b/Views/Home/dieu_khoan_view.cshtml
@@ -127,8 +127,8 @@
             <h2>Hướng Dẫn</h2>
             <ul class="de-muc">
                 <li>@Html.ActionLink("Điều Khoản", "dieu_khoan_view", "Home")</li>
-                <li><a href="">Hướng Dẫn Mua Hàng</a></li>
-                <li><a href="">Chính Sách Đổi Trả Hàng</a></li>
+                <li>@Html.ActionLink("Hướng Dẫn Mua Hàng", "huong_dan_mua_hang_view", "Home")</li>
+                <li>@Html.ActionLink("Chính Sách Đổi Trả Hàng", "chinh_sach_doi_tra_view", "Home")</li>
                 <li><a href="">Bảo Mật Thông Tin Khách Hàng</a></li>
                 <li><a href="">Chính Sách Thanh Toán</a></li>
             </ul>
