--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -6,7 +6,7 @@
 
 
 <nav class="nav">
-    <a href="./web-clothes.html"><img src="~/Content/hinh-pro/logo.jpg" width="128" /></a>
+    
     <div class="search-box">
         <input type="text" name="search" class="input-search" placeholder="Search" />
         <button>
@@ -65,7 +65,7 @@
             <div class="product-item-info">
                 <h3>Product 1</h3>
                 <p>Price: 100$</p>
-                <button>Add to cart</button>
+                <button class="cart">Add to cart</button>
             </div>
         </div>
         <div class="product-item">
