--- a/html-main/css/login.css
+++ b/html-main/css/login.css
@@ -39,13 +39,6 @@ ul {
     padding: 0;
     margin: 0;
 }
-
-body {
-    margin: 0;
-    font-family: monospace;
-    background-image: url(img/bglogin.jpg);
-}
-
 .nav {
     display: flex;
     background-color: #000;
@@ -54,239 +47,24 @@ body {
     padding: 1rem 0;
 }
 
-.nav-link {
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-}
-
-.nav-link>li {
-    margin: .5rem;
-}
-
-.nav-link>li>a:hover {
-    color: #000;
-    background-color: #fff;
-}
-
-.nav-link>li>a {
-    text-decoration: none;
-    color: #fff;
-    padding: 0.5rem 1rem;
-}
-
-.search-box {
-    display: flex;
-}
-
-.search-box>button {
-    padding: 0 1rem;
-}
-
-.input-search {
-    padding: 0.5rem 1rem;
-    border-radius: .25rem;
-    font-size: 1.5rem;
-    margin: 0 0.25rem;
-}
-
-.tab2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 1rem 0;
-}
-
-.tab2-title {
-    display: flex;
-    padding: 1rem;
-}
-
-.home>a {
-    color: blue;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block
-}
-
-.dropdown {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 16px;
-    z-index: 1;
-}
-
-.list-dropdown {
-    display: none
-}
-
-.list:hover .dropdown {
-    display: block;
-}
-
-.dropdown>li>a {
-    text-decoration: none;
-    color: #000;
-    padding: 0.5rem 1rem;
-}
-
-.dropdown>li {
-    list-style: none;
-    padding: 1rem 0;
-}
-
-.dropdown>li>a:hover {
-    color: #fff;
-    background-color: #000;
-}
-
-.title {
-    display: flex;
-    align-items: baseline;
-}
-
-.title>li {
-    list-style: none;
-    margin: 0 7rem;
-}
-
-.title>li>a {
-    text-decoration: none;
-    color: #000;
-    padding: 1rem 0;
-    font-weight: 700;
-    font-size: 25px;
-}
-
-.clearance {
-    background-color: yellow;
-    border-radius: 10px;
-}
-
-.tab3 {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 1rem 0;
-}
-
-.tab3>h2 {
-    background-color: yellow;
-    height: 5px;
-    width: 500px;
-}
-
-.product-list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-}
-
-.product-item {
-    width: 240px;
-    padding: 2rem 0;
-}
-
-.product-item-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.product-item>img {
-    border-radius: 20px;
-}
-
-.product-item>.product-item-info>button {
-    background-color: yellow;
-    border: 1px solid #000;
-    cursor: pointer;
-    width: 100px;
-    border-radius: 20px;
-}
-
-.see-all {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.see-all>button {
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    font-size: 1.5rem;
-    margin: 4rem 0.25rem;
-    border-radius: 10px;
-}
-
-.see-all>button>a {
-    text-decoration: none;
-    color: #000;
-}
-
-.footer {
-    justify-content: space-evenly;
-    align-items: center;
-    display: flex;
-    padding-top: 40%;
-}
-
-.footer-title {
-    height: 300px;
-    width: 100%;
-    background-color: black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-.social>h2 {
-    color: white;
-}
-
-.icon>a>i {
-    color: white;
-}
-
-.help>h2 {
-    color: white;
-}
-
-.de-muc>li {
-    list-style: none;
-    padding: 0.5rem 0;
-}
-
-.de-muc>li>a {
-    text-decoration: none;
-    color: #fff;
-    padding: 0.5rem 1rem;
-}
 .logins {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background-color: #f9f9f9;
+    align-items:baseline;
     padding-top: 50px;
-}
-.contact_us>h2 {
-    color: white;
+    padding-bottom: 50px;
 }
 body{
-    background-image: url(img/backgrlogin.jpg);
     font-family: monospace;
-    font-size: 14px;
-    line-height: 1.5;
+    background-image: url(./background.jpg);
+    font-size: 14px;    
+    line-height: 1.8;
     color: #333;
-    margin: 0;
     text-align: center;
+    align-items: center;
+    justify-content: space-between;
 }
+
 .login {
     background-color: #f9f9f9;
     width: 400px;
@@ -296,19 +74,83 @@ body{
     padding: 20px;
 
 }
-.login_account label{
+.login_account{
     font-family: monospace;
     text-align: center;
     display: inline-block;
+    border-radius: 10px;
+    width:200px;
 }
-.buttlogin button{
+.password{
+    font-family: monospace;
+    text-align: center;
+    display: inline-block;
+    border-radius: 10px;
+    width:200px;
+}
+#account{
+    margin-bottom:20px;
+}
+.login_button{
     background-color: yellow;
     color:#000;
     border-radius: 12px;
     border: black 3px solid;
-    width: 250px;
+    width: 200px;
     height: 50px;
-    font-size: 14px;
-    font-family: monospace;
+    font-family: 'Times New Roman', Times, monospace;
+    font-size: 20px;
+    margin-top:10px;
+    margin-bottom:10px;    
 }
+.footer{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.footer-title{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: black;
+    height: 250px;
+    width:100%;
+}
+.social > h2{
+    color:white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.icon > a > i {
+    color: white;
+    font-size: 40px;
+}
+.help > h2{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color:white;
+}
+.de-muc>li{
+    list-style: none;
+    padding: 0.5rem 0;
+}
+.de-muc > li > a{
+    text-decoration: none;
+    color: #fff;
+    padding: 0.5rem 1rem;
+}
+.contact_us > h2{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color:white;
+}
+.reserved {
+    display: flex;
 
+}
+    .reserved > h4 {
+        color: white;
+    }
