--- a/Views/Home/login_view.cshtml
+++ b/Views/Home/login_view.cshtml
@@ -37,13 +37,13 @@
         <div class="help">
             <h2>Hướng Dẫn</h2>
             <ul class="de-muc">
-                <li><a href="">Điều Khoản</a></li>
-                <li><a href="">Hướng Dẫn Mua Hàng</a></li>
-                <li><a href="">Chính Sách Đổi Trả Hàng</a></li>
+                <li><a href="https://localhost:44373/Home/dieu_khoan_view">Điều Khoản</a></li>
+                <li><a href="https://localhost:44373/Home/huong_dan_mua_hang_view">Hướng Dẫn Mua Hàng</a></li>
+                <li><a href="https://localhost:44373/Home/chinh_sach_doi_tra_view">Chính Sách Đổi Trả</a></li>
                 <li><a href="">Bảo Mật Thông Tin Khách Hàng</a></li>
                 <li><a href="">Chính Sách Thanh Toán</a></li>
+                <li><h4>Co_Chay® All Right Reserved</h4></li>
             </ul>
-            <h4>Co_Chay® All Right Reserved</h4>
         </div>
         <div class="contact_us">
             <h2>Liên Hệ</h2>
