--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -17,7 +17,7 @@
     </div>
     <ul class="nav-link">
         <li>
-            <a href="#">Login</a>
+            <a href="https://localhost:44373/Home/login_view">Login</a>
         </li>
         <li>
             <a href="#">Register</a>
