--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -28,6 +28,17 @@
     font-size: 16px;
 }
 
+body {
+    font-family: monospace;
+    background-image: url(hinh-pro/background.jpg);
+    background-size:cover;
+    font-size: 14px;
+    color: #333;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+}
+
 ul {
     padding: 0;
     margin: 0;
